docs/v2/components/demo/app.css
body, body:hover, body a, body button, body media-switch {
  cursor: url('http://ionicframework.com/img/finger.png'), auto;
  overflow: hidden;
}

section.hidden {
  display: none !important;
}

#ionitron {
  width: 100px;
  height: 100px;
  position: absolute;
  top: 25%;
  margin-top: -50px;
  left: 50%;
  margin-left: -50px;
}

.animation-buttons {
  position: absolute;
  bottom: 25%; 
  left: 60px; 
  display: inline;
}

.components-demo h4 {
  text-align: center;
}

.section-padding {
  padding: 16px;
}

.components-demo section {
  width: 100%;
  height: 100%;
}

.components-icons {
  font-size: 2em;
  text-align: center;
}

ion-scroll {
  width: 100%;
  height: 100%;
}

.demo-slide {
  display: block;
  height: 100%;
  padding: 500px 0;
  width: 100%;
  font-weight: bold;
  font-size: 2.5em;
  color: #fff;
}

.demo-slide-1 {
  background-color: #32db64;
}

.demo-slide-2 {
  background-color: #387ef5;
}

.demo-slide-3 {
  background-color: #f53d3d;
}

scroll-content {
  overflow-y: scroll;
  margin-right: -15px;
}

.md .ion-md-share {
  color: #ED4248;
}
.md .ion-md-arrow-dropright-circle {
  color: #508AE4;
}
.md .ion-md-heart-outline {
  color: #31D55F;
}

.md .action-sheet-destructive {
  margin-top: 2px;
  padding-top: 1px;
}

.md .action-sheet-cancel icon, .md .action-sheet-destructive icon {
  color: #757575;
}

#card-wireframe {
  width: 100%;
  margin-bottom: 2.7em;
}
#subtle-footer {
  background-color: #fff;
  border-image-source: url(footer-wireframe.png);
  border-image-repeat: repeat;
  border-image-width: 100%;
  border-bottom: 0;
  border-left: 0;
  border-right: 0;
  position: absolute;
  bottom:0;
}
#demo-fab-bottom {
  padding-top: 3px;
  z-index: 100;
}
#subtle-footer .toolbar-background {
  background-color: #fff;
  border-bottom: 0;
}
.demo-card {
  height: 0;
}
.demo-card button {
  font-size: 1.3rem;
}
ion-card ion-card-content.buttons-in-components {
  background-color: #F4F5F8;
}
ion-card ion-card-content.buttons-in-components img {
  width: auto;
  height: 44px;
  display: block;
  margin: 20px auto;
}

ion-card.buttons-in-components {
  margin-bottom: 2em;
}

ion-card.cards-list-demo ion-card-header {
  color: #387df5;
}

ion-card.cards-list-demo a > icon {
  color: #444444;
}

.adv-background {
  position: relative;
  text-align: center !important;
}

ion-card p.adv-background-title {
  position: absolute;
  top: 29%;
  font-size: 2.0em;
  width: 100%;
  font-weight: bold;
  color: #fff !important;


}

ion-card p.adv-background-subtitle {
  font-size: 1.0em;
  position: absolute;
  top: 48%;
  width: 100%;
  color: #fff !important;

}

ion-card .icon-avatar {
  margin: 10px 8px;
  min-width: 2.4rem !important;
  color: #444444;
  font-size: 1.8em;
  text-align: center;
}

ion-card.adv-map p {
  font-size: 0.7em !important;
}

.ios ion-content.cards-bg {
  background-color: #f4f4f7;
}
.md ion-content.cards-bg {
  background-color: #EEEEEE !important;
}

.demo-list-icons icon {
  color: #444444;
}
.demo-list-icons icon#secondary {
  color: #32DB64;
}

body.md {
  border-top: 24px solid black;
}

body.ios{
  border-top: 10px solid #F8F8F8;
}

body.ios backdrop {
  top: -10px;
  height: 105%;
}

body.md backdrop {
  top: -24px;
  height: 107%;
}
 
body.md img#md-only {
  display: block !important;
  position: absolute;
  top: -24px;
  width: 100%;
  height: auto;
}

body.ios img#ios-only {
  display: block !important;
  position: absolute;
  top: -6px;
  width: 100%;
  height: auto;
  z-index: 9999;
}

